<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_sales"
        android:icon="@drawable/ic_nav_sales"
        android:title="@string/nav_sales" />
    <item
        android:id="@+id/nav_inventory"
        android:icon="@drawable/ic_nav_inventory"
        android:title="@string/nav_inventory" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_nav_statistics"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
